Feature/ab2 d 4217 contract rest setup (#943)
* Inicial code to setup Contract work

* new changes

* Revert pdp changes

* Remove file

* New update on changes

* Next clean changes

* Delete previously deleted tests

* next version

* Change test

* Update EndToEndBfdTests.java

* Remove uneeded code

* Remove test properties files

* remove unneeded code

* Remove DTO as entity

* Add  Contract client

* Change ContractWorker to use as a interface

* Fix Tests and bugs

* Change contract client

* Formatting and warning cleanup.

* Change Client to be self dependent

* fix bug on tests

* code cleanup and fix tests

* Update tests

* Update EndToEndBfdTests.java

* Fix tabs

* More cleanup changes

* Clean up code.

* Update CoverageDriverImpl.java

Change grammer in comments

* Fix Tests

* Update Mapping.java

* Update AdminAPIPdpClientTests.java

* Refactor objectmapper

Co-authored-by: nflearl <earl.nolan@semanticbits.com>